<resources>
    <string name="app_name">eGranja</string>
    <string name="action_search">Search</string>
    <string name="action_showList">Show as List</string>
    <string name="action_showGrid">Show as Grid</string>
    <string name="login_title">Sign In</string>
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_loginText">Sign In</string>
    <string name="login_dividerText">OR</string>
    <string name="login_signUpText">Sign Up For Account</string>
    <string name="login_forgotPasswordText">Forgot Password?</string>
    <string name="signUp_title">Sign Up</string>
    <string name="signUp_firstName">First Name</string>
    <string name="signUp_lastName">Last Name</string>
    <string name="signUp_number">Number</string>
    <string name="signUp_email">Email</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_answer">Answer</string>
    <string name="signUp_signUp">Sign Up</string>
    <string name="editUser_instructionsText">Edit Your Details</string>
    <string name="editUser_firstName">First Name</string>
    <string name="editUser_lastName">Last Name</string>
    <string name="editText_number">Number</string>
    <string name="editText_email">Email</string>
    <string name="editUser_password">Password</string>
    <string name="editUser_oldPassword">Old Password</string>
    <string name="editUser_confirmPassword">Confirm Password</string>
    <string name="editUser_updatePassword">Update Password</string>
    <string name="editUser_answer">Answer</string>
    <string name="editUser_updateSecurityCredentials">Update Security Credentials</string>
    <string name="forgotPassword_instruction">Verify Your Security Credentials</string>
    <string name="forgotPassword_email">Email</string>
    <string name="forgotPassword_answer">Answer</string>
    <string name="forgotPassword_verify">Verify</string>
    <string name="forgotPassword_password">Password</string>
    <string name="forgotPassword_confirmPassword">Confirm Password</string>
    <string name="forgotPassword_updatePassword">Update Password</string>
    <string name="addProduct_title">Add Product</string>
    <string name="editProduct_title">Edit Product</string>
    <string name="product_productName">Product Name</string>
    <string name="product_productDescription">Product Description</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_price">Price</string>
    <string name="product_startRecordingAudio">Start Recording Audio Description</string>
    <string name="product_stopRecordingAudio">Stop Recording Audio</string>
    <string name="product_previewAudio">Preview Audio</string>
    <string name="product_uploadVideo">Upload Video Description</string>
    <string name="product_previewVideo">Preview Video Description</string>
    <string name="product_Location">Set Location</string>
    <string name="product_viewLocation">View Location</string>
    <string name="product_chooseLocation">Choose Location</string>
    <string name="product_dividerText">OR</string>
    <string name="product_imageInstruction">Select Four Images of the Product</string>
    <string name="product_optionalInstruction">Optional</string>
    <string name="product_locationInstruction">Location of Product</string>
    <string name="userDetail_fullName">Full Name</string>
    <string name="userDetail_number">Number</string>
    <string name="userDetail_email">Email</string>
    <string name="viewProduct_moreDescription">More</string>
    <string name="viewProduct_viewOnMap">View On Map</string>
    <string name="viewProduct_callFarmer">Call Farmer</string>
    <string name="viewProduct_MessageFarmer">Message Farmer</string>
    <string name="viewProduct_descriptionTitle">Product Description</string>
    <string name="audioPreview_play">Play</string>
    <string name="audioPreview_pause">Pause</string>
    <string name="showImageDialog_title">Select Image From</string>
    <string-array name="showImageDialog_dialogOptions">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>
    <string name="selectImageFromGallery_errorMessage">No Suitable App Found!</string>
    <string name="showVideoDialog_title">Select Video From</string>
    <string-array name="showVideoDialog_dialogOptions">
        <item>Gallery</item>
        <item>Camera</item>
    </string-array>
    <string name="showLocationDialog_title">Set Product Location From</string>
    <string-array name="showLocationDialog_dialogOptions">
        <item>Current Location</item>
        <item>Location List</item>
    </string-array>
    <string name="no_geocoder_available">No Geocoder Available</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid Longitude and/or Latitude value used</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="address_found">Address Found!</string>
    <string-array name="security_questions">
        <item>Select your security question</item>
        <item>What is your mother's name?</item>
        <item>What is your favorite animal?</item>
        <item>What is your street name?</item>
        <item>What is the name of your first crush?</item>
        <item>Who is your favorite school teacher?</item>
    </string-array>
    <string-array name="quantity_units">
        <item>Select Unit</item>
        <item>Bag</item>
        <item>Basket</item>
        <item>Box</item>
        <item>Cup</item>
        <item>Kilo</item>
        <item>Sack</item>
    </string-array>
    <string-array name="categories_names">
        <item>Select Category</item>
        <item>Tubers</item>
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Grains</item>
        <item>Meat</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_upload_title">Upload</string>
    <string name="addProduct_toolbarTitle">Add New Product</string>
    <string name="save">save</string>
    <string name="edit_password">Edit Password</string>
    <string name="edit_security">Edit Security Details</string>
    <string name="userDetails_title">Your Details</string>
    <string name="title_activity_home">eGranja</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category</string>
    <string name="my_products">My Products</string>
    <string name="my_account">My Account</string>
    <string name="add_product">Add Product</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="editProduct_toolbarTitle">Edit Product</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="product_AudioDescription">Audio Description</string>
    <string name="product_VideoDescription">Video Description</string>
</resources>