<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_product"
            android:title="@string/my_products" />
        <item
            android:id="@+id/nav_udetails"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/my_account" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_add_product"
                android:icon="@drawable/ic_menu_upload"
                android:title="@string/add_product" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
