<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/small_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgotPassword_layPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:hint="@string/forgotPassword_password"
        android:padding="@dimen/min_padding"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword_layConfirmPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/forgotPassword_txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:inputType="textPassword"
            android:padding="@dimen/editText_padding" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/forgotPassword_layConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:hint="@string/forgotPassword_confirmPassword"
        android:padding="@dimen/min_padding"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword_btnUpdatePassword"
        app:layout_constraintEnd_toEndOf="@id/forgotPassword_layPassword"
        app:layout_constraintStart_toStartOf="@id/forgotPassword_layPassword"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword_layPassword"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/forgotPassword_txtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_background"
            android:inputType="textPassword"
            android:padding="@dimen/editText_padding" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/forgotPassword_btnUpdatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="@dimen/activity_margin"
        android:layout_marginStart="@dimen/activity_margin"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:text="@string/forgotPassword_updatePassword"
        android:textColor="@color/textColorCustom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/forgotPassword_layPassword"
        app:layout_constraintStart_toStartOf="@id/forgotPassword_layPassword"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword_layConfirmPassword" />


</android.support.constraint.ConstraintLayout>