<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editUser_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.turkeytech.egranja.activity.SignUpActivity">

    <include layout="@layout/zz_no_data"
        android:id="@+id/editUser_noData"
        android:visibility="gone"/>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/editUser_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/editUser_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/editUser_btnToolbarClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/edit_profile"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ProgressBar
        android:id="@+id/editUser_progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-6dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_anchor="@id/editUser_appBarLayout"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/editUser_nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/default_margin">


            <TextView
                android:id="@+id/editUser_txtInstruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="50dp"
                android:text="@string/editUser_instructionsText"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <android.support.design.widget.TextInputLayout
                android:id="@+id/editUser_layFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="50dp"
                android:hint="@string/editUser_firstName"
                android:padding="@dimen/min_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editUser_txtInstruction">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editUser_txtFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_background"
                    android:inputType="text"
                    android:padding="@dimen/editText_padding" />
            </android.support.design.widget.TextInputLayout>





            <android.support.design.widget.TextInputLayout
                android:id="@+id/editUser_layNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:hint="@string/editText_number"
                android:padding="@dimen/min_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/editUser_layFirstName"
                app:layout_constraintTop_toBottomOf="@id/editUser_layFirstName">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editUser_txtNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_background"
                    android:inputType="number"
                    android:padding="@dimen/editText_padding" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/editUser_layEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:hint="@string/editText_email"
                android:padding="@dimen/min_padding"
                app:layout_constraintEnd_toEndOf="@id/editUser_layFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editUser_layNumber">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editUser_txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/text_background"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/editText_padding" />
            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
